# opengl-tinyrenderer

./: CMakeLists.txt
tinyRenderer/configuration/: root_directory.h  root_directory.h.in
tinyRenderer/includes/learnopengl/: camera.h  filesystem.h
tinyRenderer/src/: main.cpp
tinyRenderer/src/tinyRenderer/: glCommon.h  glCube.cpp  glCube.h  glLight.h  glObject.h  refer.h  tinyRenderer.cpp  tinyRenderer.h
